tests/paczka1/small_fuzzy/33062292.err
Error in line 1: S513 S925 33,3
Error in line 10: RNP S513 9,7
